添加前端模板参数

--- a/start/src/main/resources/templates/antd.html
+++ b/start/src/main/resources/templates/antd.html
@@ -3,11 +3,15 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ant Design Pro</title>
-    <link rel="stylesheet" href="//case-workbench-dev.nolaurence.cn/umi.043f10e7.css">
-    <script async="" src="//case-workbench-dev.nolaurence.cn/scripts/loading.js"></script>
+    <link rel="stylesheet" href="//case-workbench.vercel.app/umi.css">
+    <script async="" src="//case-workbench.vercel.app/scripts/loading.js"></script>
 </head>
 <body>
-<div id="root"></div>
-<script src="//case-workbench-dev.nolaurence.cn/umi.29e417b2.js"></script>
+    <div id="root"></div>
+    <script>
+        window.resouceBaseUrl = "https://case-workbench-assets.nolaurence.cn/";
+        window.publicPath = "https://case-workbench-assets.nolaurence.cn/";
+    </script>
+    <script src="//case-workbench.vercel.app/umi.js"></script>
 
 </body></html>
